--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
             </li>
             <li>
                 <div class="box">
+                    <h3>Language Translator</h3>
+                    <p> A language translator web app that facilitates seamless communication across languages through text translation and localization, enhancing global connectivity.</p>
+                    <a href="https://207r1a6654.github.io/language_translator/"><i class='bx bx-link-external'></i>Visit Project</a>
+                </div>
+            </li>            
+            <li>
+                <div class="box">
                     <h3>Tic-Tac-Toe Game</h3>
                     <p>This fun Tic-Tac_toe game is a 2 player game webpage which allows you to play with your friends. HTML, CSS and JavaScript are the sources of this online game.</p>
                     <a href="https://207r1a6654.github.io/tic-tac-toe/"><i class='bx bx-link-external'></i>Visit Project</a>
