--- a/index.html
+++ b/index.html
@@ -32,63 +32,68 @@
     </section>
     <section id="two">
         <h2>Projects</h2>
-        <ul>
-            <li>
-                <div class="box">
-                    <h3>Music Visualization App</h3>
-                    <p> In this project, I designed visuals, integrated audio processing, and implemented play controls for a dynamic user experience. </p>
-                    <a href="https://207r1a6654.github.io/Music-visualization-app/"><i class='bx bx-link-external'></i>Visit Project</a>
-                </div>
-            </li>
-            <li>
-                <div class="box">
-                    <h3>Language Translator</h3>
-                    <p> A language translator web app that facilitates seamless communication across languages through text translation and localization, enhancing global connectivity.</p>
-                    <a href="https://207r1a6654.github.io/language_translator/"><i class='bx bx-link-external'></i>Visit Project</a>
-                </div>
-            </li>            
-            <li>
-                <div class="box">
-                    <h3>Tic-Tac-Toe Game</h3>
-                    <p>This fun Tic-Tac_toe game is a 2 player game webpage which allows you to play with your friends. HTML, CSS and JavaScript are the sources of this online game.</p>
-                    <a href="https://207r1a6654.github.io/tic-tac-toe/"><i class='bx bx-link-external'></i>Visit Project</a>
-                </div>
-            </li>
-            <li>
-                <div class="box">
-                    <h3>Timer Web App</h3>
-                    <p>This project allows the user to set a timer, pause, start and reset again. there is also a clock inclucded which runs on the system time in which the application is running.I have used HTML, CSS and JavaScript for this project</p>
-                    <a href="https://207r1a6654.github.io/TImer-WebApp/"><i class='bx bx-link-external'></i>Visit Project</a>
-                </div>
-            </li>
-            <li>
-                <div class="box">
-                    <h3>Weather App</h3>
-                    <p>This web app allows you to view the weather humidity and windspeed of the city you want. i have implemented this using HMTL, CSS and JavaScript.</p>
-                    <a href="https://207r1a6654.github.io/weather-app/"><i class='bx bx-link-external'></i>Visit Project</a>
-                </div>
-            </li>
-            <li>
-                <div class="box">
-                    <h3>To-Watch Movies List</h3>
-                    <p>This project allows you to save the movies you want to watch and delete them once you have watched them. this is similar to the to-do list but the purpose is different. this project can be used for different purposes just by changing the code.</p>
-                    <a href="https://207r1a6654.github.io/To-watch-movies-list/"><i class='bx bx-link-external'></i>Visit Project</a>
-                </div>
-            </li>
-            <li>
-                <div class="box">
-                    <h3>Portfolio</h3>
-                    <p>The one you're viewing now</p>
-                </div>
-            </li>            
-        </ul>
+        <div class="projects-container">
+            <ul class="projects-list">
+                <li>
+                    <div class="box">
+                        <h3>Music Visualization App</h3>
+                        <p> In this project, I designed visuals, integrated audio processing, and implemented play controls for a dynamic user experience. </p>
+                        <a href="https://207r1a6654.github.io/Music-visualization-app/"><i class='bx bx-link-external'></i>Visit Project</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="box">
+                        <h3>Language Translator</h3>
+                        <p> A language translator web app that facilitates seamless communication across languages through text translation and localization, enhancing global connectivity.</p>
+                        <a href="https://207r1a6654.github.io/language_translator/"><i class='bx bx-link-external'></i>Visit Project</a>
+                    </div>
+                </li> 
+                <li>
+                    <div class="box">
+                        <h3>Tic-Tac-Toe Game</h3>
+                        <p>This fun Tic-Tac_toe game is a 2 player game webpage which allows you to play with your friends. HTML, CSS and JavaScript are the sources of this online game.</p>
+                        <a href="https://207r1a6654.github.io/tic-tac-toe/"><i class='bx bx-link-external'></i>Visit Project</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="box">
+                        <h3>Timer Web App</h3>
+                        <p>This project allows the user to set a timer, pause, start and reset again. there is also a clock inclucded which runs on the system time in which the application is running.I have used HTML, CSS and JavaScript for this project</p>
+                        <a href="https://207r1a6654.github.io/TImer-WebApp/"><i class='bx bx-link-external'></i>Visit Project</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="box">
+                        <h3>Weather App</h3>
+                        <p>This web app allows you to view the weather humidity and windspeed of the city you want. i have implemented this using HMTL, CSS and JavaScript.</p>
+                        <a href="https://207r1a6654.github.io/weather-app/"><i class='bx bx-link-external'></i>Visit Project</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="box">
+                        <h3>To-Watch Movies List</h3>
+                        <p>This project allows you to save the movies you want to watch and delete them once you have watched them. this is similar to the to-do list but the purpose is different. this project can be used for different purposes just by changing the code.</p>
+                        <a href="https://207r1a6654.github.io/To-watch-movies-list/"><i class='bx bx-link-external'></i>Visit Project</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="box">
+                        <h3>Portfolio</h3>
+                        <p>The one you're viewing now</p>
+                    </div>
+                </li>            
+            </ul>
+        </div>
+        <div class="scroll-arrows">
+            <button class="scroll-left"><i class='bx bx-chevron-left'></i></button>
+            <button class="scroll-right"><i class='bx bx-chevron-right'></i></button>
+        </div>
     </section>
     <section id="three">
         <div class="container">
             <div class="box" id="educationBox">
                 <h2>Education</h2>
                 <ul>
-                    <!-- Education details -->
                     <div class="box"><li>BTech in Computer Science Engineering from CMR Technical Campus with a CGPA of 8.5</li></div>
                     <div class="box"><li>Intermediate in MPC from Sri Chaitanya Junior College with a score of 86%</li></div>
                     <div class="box"><li>High School from Sri Chaitanya Techno School with a GPA of 10</li></div>
@@ -100,48 +105,48 @@
         <div class="container">
             <div class="box" id="skillsBox">
                 <h2>Skills</h2>
-                <ul>
-                    <li>
+                <ul class="skills-list">
+                    <li class="skill">
                         <h4><i class='bx bxl-html5'></i>HTML</h4>
                         <div class="progress">
                             <div class="progressBar" style="width: 90%;"></div>
                         </div>
                     </li>
-                    <li>
-                        <h4><i class='bx bxl-css3' ></i>CSS</h4>
+                    <li class="skill">
+                        <h4><i class='bx bxl-css3'></i>CSS</h4>
                         <div class="progress">
                             <div class="progressBar" style="width: 85%;"></div>
                         </div>
                     </li>
-                    <li>
-                        <h4><i class='bx bxl-javascript' ></i>JavaScript</h4>
+                    <li class="skill">
+                        <h4><i class='bx bxl-javascript'></i>JavaScript</h4>
                         <div class="progress">
                             <div class="progressBar" style="width: 80%;"></div>
                         </div>
                     </li>
-                    <li>
-                        <h4><i class='bx bxl-nodejs' ></i>NodeJS</h4>
+                    <li class="skill">
+                        <h4><i class='bx bxl-nodejs'></i>NodeJS</h4>
                         <div class="progress">
                             <div class="progressBar" style="width: 80%;"></div>
                         </div>
                     </li>
-                    <li>
-                        <h4><i class='bx bxs-data' ></i>SQL</h4>
+                    <li class="skill">
+                        <h4><i class='bx bxs-data'></i>SQL</h4>
                         <div class="progress">
                             <div class="progressBar" style="width: 80%;"></div>
                         </div>
                     </li>
-                    <li>
-                        <h4><i class='bx bxl-c-plus-plus' ></i>C++</h4>
+                    <li class="skill">
+                        <h4><i class='bx bxl-c-plus-plus'></i>C++</h4>
                         <div class="progress">
                             <div class="progressBar" style="width: 80%;"></div>
                         </div>
                     </li>
-                    
                 </ul>
             </div>
         </div>
     </section>
+    
     <section id="five">
         <div class="container">
             <div class="box" id="certificationsBox">
@@ -176,7 +181,8 @@
     <section id="seven">
         <div class="container">
             <h2>Contact Me</h2>
-            <button id="contact-button"><a href="https://formsubmit.co/el/kujure">Contact ME</a></button>
+            <!-- <button id="contact-button"><a href="https://formsubmit.co/el/kujure">Contact ME</a></button> -->
+            <iframe src="https://formsubmit.co/el/kujure" frameborder="0" style="height: 90vh;width:80vh"></iframe>
         </div>
     </section>
     <script src="script.js"></script>
